releases/v1.4.2/zh-CN.md
# 前置通知

目前，Gitee 已经阻断了 League Akari 的直链下载方式，这意味着软件内部的自动更新功能将失效（GitHub 数据源不受影响）。

因此，作为解决方案，若要更新到此版本，可以选择：

1. 蓝奏云：[https://hanxven.lanzoum.com/b0mc8n1re](https://hanxven.lanzoum.com/b0mc8n1re)，提取码: **miku**
2. 直链下载：[点击这里](https://akari-static.hanxven.cc/League%20Akari-1.4.2-win.7z)
3. 如果你可以直连 GitHub，**可将 Git 仓库源** 切换至 GitHub，并触发应用内的自动更新。或在对应的 [Releases](https://github.com/LeagueAkari/LeagueAkari/releases) 页面下载最新版本。

# v1.4.2 (2026-01-05)

本次更新是对 v1.4.1 的修复补丁，修复了对局窗口无法使用的问题。

以下内容**也包含** v1.4.1 的全部更新内容。

## 1. 新增

- 自动英雄选择和禁用功能，"立即锁定"选项回归。

## 2. 修复

- **[v1.4.2] 修复了对局窗口无法使用的问题。**

- 修复了启动页无法启动客户端的问题。

- 修复了 OP.GG 窗口无法启动的问题。

- 战绩页面在翻页时将不再重置页面大小。

- 对局页面的玩家卡片，部分标签没有正确对应设置项，现已修复。

- 修复了预组队判定可能出现跨队伍的问题。

- 修复了在乱斗系模式中，自动交换英雄功能被强制开启的问题，现在正确绑定了设置项。

- 修复了 OP.GG 窗口在选定英雄（而非锁定英雄）时无法自动切换到对应英雄的问题。

- 现在会补全匿名玩家的位置分配信息。

- 部分组件已适配亮色模式。

- 在战绩页面的段位展示组件中，单双队列会始终排在灵活队列的前面。

- 修复了侧边栏中，召唤师经验条展示错误的问题。

- 修复了一些潜在的无法启动的问题。现在仅仅会在日志中报错，而非导致应用崩溃。

- 修复了在数次启动应用后，窗口大小发生变化的问题。

## 3. 调整

- 当对局为 5v5 规模时，如果横向空间足够，对局页面的玩家卡片的高度将在一定范围内自适应。

- 调整了一些配色，移除了绿色。

- 暂时移除了自动英雄选择和禁用功能的自适应时间调整逻辑，以临时避免边界条件导致的延时计算错误问题。将在未来版本寻找更好的解决方案。

- 移除了自动禁用功能中的"无视队友预选"选项。

## 4. 免责声明

本软件是基于 Riot 的 League Client Update (LCU) API 开发的工具。它不使用侵入性技术，理论上不会直接干扰或修改游戏数据。但是，请注意可能存在的兼容性问题或与游戏更新或反作弊系统相关的风险。

此外，本应用并非由 Riot Games 官方支持或认可，Riot Games 保留所有权利。使用本应用风险自负，因为它可能违反游戏的服务条款。
